# em-test

./: .env  .env.example  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
em_project/: asgi.py  settings.py  urls.py  wsgi.py
em_project/orders/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
em_project/orders/migrations/: 0001_initial.py  0002_dish_remove_order_items_remove_orderitem_name_and_more.py  0003_alter_orderitem_dish_alter_orderitem_order.py  0004_remove_orderitem_dish_orderitem_dish_name_and_more.py  0005_alter_orderitem_dish_name.py  0006_delete_orderitem.py  0007_orderitem.py  0008_alter_order_total_price.py  0009_alter_order_status.py  0010_alter_order_table_number_alter_order_total_price_and_more.py  0011_alter_order_table_number.py
em_project/templates/: 404.html  base.html
em_project/templates/includes/: nav.html
em_project/templates/orders/: delete_order.html  delete_order_by_id.html  edit_order_items.html  income.html  index.html  order.html  order_form.html  orders.html  search_order.html
em_project/templatetags/: custom_filters.py
